--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
             'video2.mp4',
             'video3.mp4',
             'video4.mp4',
+            'video5.mp4',
+            'video6.mp4',
         ];
 
         // Get the video player and video chooser elements
